--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@ body {
     font-weight: 300;
     color: #fff;
     background-color: #000;
-    background-image: url("../images/cool-background (1).png");
+    background-image: url("../imgs/cool-background\ \(3\).png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
